--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-modal": "^3.14.3",
     "unsplash-js": "^7.0.15"
   },
